--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,45 @@
 asgiref==3.4.0
+async-timeout==4.0.2
 backports.zoneinfo==0.2.1
 certifi==2021.10.8
 charset-normalizer==2.0.12
 coreapi==2.3.3
 coreschema==0.0.4
+Deprecated==1.2.13
 Django==3.2.8
+django-cors-headers==3.12.0
+django-filter==21.1
+django-query-profiler==0.9
 django-rest-swagger==2.2.0
 djangorestframework==3.13.1
+drf-writable-nested==0.6.3
+future==0.18.2
 idna==3.3
+isort==5.10.1
 itypes==1.2.0
 Jinja2==3.0.3
 MarkupSafe==2.0.0
+mmh3==3.0.0
+mo-dots==9.169.22121
+mo-future==6.2.21303
+mo-imports==7.169.22121
+mo-parsing==8.170.22121
+mo-sql-parsing==8.172.22121
+numpy==1.22.4
 openapi-codec==1.3.2
+packaging==21.3
+pandas==1.4.2
 Pillow==6.2.1
+psycopg2-binary==2.9.3
+pyparsing==3.0.9
+python-dateutil==2.8.2
 pytz==2021.3
+redis==4.3.1
 requests==2.27.1
 simplejson==3.17.6
+six==1.16.0
 sqlparse==0.4.2
+tkintertable==1.3.3
 uritemplate==4.1.1
 urllib3==1.26.8
+wrapt==1.14.1
